# rivvitium-lgr

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
cli/: Cargo.toml
crates/apex/: Cargo.toml
crates/apex/src/: engines.rs  lib.rs  state.rs  utils.rs
crates/apex/src/engines/: riv.rs
crates/apex/src/engines/riv/: component_configuration.rs  config.rs  config_tests.rs  engine.rs  parse_helper.rs  pipe_metrics.rs  riv_parser.rs
crates/apex/src/state/: app_state.rs  app_state_tests.rs  parse_detail_dto.rs  sink_config.rs
crates/apex/src/utils/: format_utils.rs
crates/riv/: Cargo.toml
crates/riv-app-egui/: Cargo.toml
crates/riv-app-egui/src/: app.rs  main.rs  ui.rs
crates/riv-app-egui/src/app/: parse_detail_dto.rs  rivvitium_app.rs
crates/riv-app-egui/src/ui/: dialogs.rs  helpers.rs  layouts.rs  menu.rs  regions.rs  views.rs  visuals.rs
crates/riv-app-egui/src/ui/dialogs/: about_dialog.rs  file_dialog.rs  sink_dialog.rs
crates/riv-app-egui/src/ui/regions/: action_panel.rs  button_bar.rs  footer.rs  header.rs
crates/riv-app-egui/src/ui/views/: activity_view.rs  data_view.rs  parse_detail_view.rs  sink_detail_view.rs  source_detail_view.rs
crates/riv-app-egui/src/ui/visuals/: banners.rs  colors.rs
crates/riv/benches/: riv_one.rs
crates/riv/src/: component.rs  error.rs  lib.rs
crates/riv/src/component/: relay.rs  sink.rs  source.rs
crates/riv/src/component/relay/: console_relay.rs  empty_relay_config.rs  statistics_relay.rs
crates/riv/src/component/sink/: capture_sink.rs  console_sink.rs  csv_sink.rs  dev_null_sink.rs  empty_sink_config.rs  json_sink.rs  kafka_sink.rs  pubsub_sink.rs  sink_settings.rs  sql_server_sink.rs  sqlite_sink.rs
crates/riv/src/component/source/: csv_byte_source.rs  csv_byte_source_tests.rs  csv_string_source.rs  path_buf_config.rs  vector_source.rs  vector_source_tests.rs
crates/riv/src/model/: coordinate.rs  ir.rs
crates/riv/src/model/coordinate/: coordinate.rs
crates/riv/src/model/ir/: byte_row.rs  byte_row_tests.rs  external_metadata.rs  string_row.rs  string_row_tests.rs
crates/riv/src/utils/: digest.rs  digest_tests.rs  test_file.rs  test_file_tests.rs
crates/riv/tests/: csv_byte_pipeline_test.rs  csv_pipeline_test.rs  lib.rs  nv_pipeline_test.rs  pipeline_tests.rs  sqlite_sink_pipeline_test.rs
crates/riv/tests/common/: fixtures.rs  mod.rs
gui/: Cargo.toml  build.rs
riv/: Cargo.toml
riv/benches/: riv_one.rs
riv/src/: error.rs  lib.rs  model.rs  relay.rs  sink.rs  utils.rs
riv/src/component/: relay.rs  sink.rs  source.rs
riv/src/component/relay/: console_relay.rs
riv/src/component/sink/: capture_sink.rs  console_sink.rs  csv_sink.rs  sqlite_sink.rs
riv/src/component/source/: csv_adapter.rs  csv_byte_source.rs  csv_byte_source_tests.rs  csv_source.rs  csv_string_source.rs  json_adapter.rs  json_array_source.rs  vector_source.rs  vector_source_tests.rs
riv/src/error/: io_error_wrapper.rs
riv/src/model/: ir.rs
riv/src/model/coordinate/: text_location.rs
riv/src/model/ir/: atom.rs  atom_type.rs  byte_record.rs  byte_row.rs  byte_row_tests.rs  data_record.rs  external_metadata.rs  external_metadata_tests.rs  nv_strings.rs  string_row.rs  string_row_tests.rs
riv/src/relay/: console_relay.rs
riv/src/sink/: capture_sink.rs  console_sink.rs
riv/src/source/: vector_source.rs  vector_source_tests.rs
riv/src/utils/: digest.rs  test_file.rs
riv/tests/: csv_byte_pipeline_test.rs  csv_pipeline_test.rs  helpers_arrange.rs  main.rs  nv_pipeline_test.rs  pipeline_tests.rs  sqlite_sink_pipeline_test.rs
riv/tests/common/: fixtures.rs  fixtures_tests.rs
zed/: Cargo.toml
(+56 files in other folders)
