[package]
name       = "riv"
version    = "0.1.0"
edition    = "2024"

[dependencies]
thiserror   = "2.0"
hex         = "0.4"
sha2        = "0.10"
ulid        = "1.2.1"
zed         = {path = "../zed"}


[dev-dependencies]
criterion     = {version = "0.5", features = ["html_reports"]}

[[bench]]
name    = "riv_one"    # Name of your benchmark file 
harness = false        # Disable Cargo's benchmark harness
