[package]
name        = "apex"
version     = "0.1.0"
edition     = "2024"

[dependencies]
num-format         = "0.4"
riv                = {path = "../riv"}
tracing            = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"] }
zero               = {path = "../zero"}
thiserror = "2.0.12"
