[package]
name        = "riv-app-egui"
version     = "0.1.0"
edition     = "2024"

[dependencies]
apex        = {path = "../apex"}
eframe      = {version = "0.31.1", features = ["wgpu"] } # Updated eframe version to 0.31.1
egui        = "0.31.1"
egui_extras = {version = "0.31", features = ["image"] }
image       = "0.25.6"   # PNG/JPEG loader
num-format  = "0.4"
rfd         = {version = "0.15", default-features = false, features = ["tokio"] }
riv         = {path = "../riv"}
tracing     = "0.1"
zero        = {path = "../zero"}
rand = "0.9.1"
