[package]
name       = "riv"
version    = "0.1.0"
edition    = "2024"

[dependencies]
csv                = "1.3"
csv-core           = "0.1.12"
hex                = "0.4"
rusqlite           = "0.36.0"
serde              = {version = "1.0"}
#serde_json         = "1.0"
simd-json          = "0.15.1"
sha2               = "0.10"
tempfile           = "3.20.0"
thiserror          = "2.0"
tracing            = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"] }
ulid               = "1.2.1"
zed                = {path = "../zed"}


[dev-dependencies]
criterion     = {version = "0.5", features = ["html_reports"]}
tempfile      = "3"


[[bench]]
name    = "riv_one"    # Name of your benchmark file 
harness = false        # Disable Cargo's benchmark harness
